# apple-platform-rs

apfs-cli/: Cargo.toml
apfs-cli/src/: main.rs
apfs-core/: Cargo.toml  README.md
apfs-core/src/: block.rs  btree.rs  error.rs  filesystem.rs  lib.rs  object_map.rs  pod.rs  space_manager.rs  volume.rs
apfs-core/src/read/: container.rs  mod.rs
apfs-derive/: Cargo.toml
apfs-types/: Cargo.toml
apfs-types/src/: lib.rs
