[package]
name = "apfs-core"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
readme = "README.md"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
description = "Apple File System (APFS) core data structures"
keywords = ["apple", "apfs", "filesystem"]
homepage = "https://github.com/indygreg/apple-platform-rs"
repository = "https://github.com/indygreg/apple-platform-rs.git"

[dependencies]
bitflags = "2.4.1"
bit-vec = "0.6.3"
bytes = "1.5.0"
log = "0.4.20"
num_enum = "0.7.1"
thiserror = "1.0.50"

[dependencies.apfs-types]
path = "../apfs-types"
version = "0.1.0"
features = ["std"]

[features]
